force-app/main/default/objects/WhatsApp_Campaign__c/WhatsApp_Campaign__c.object-meta.xml
<CustomObject>
    <label>WhatsApp Campaign</label>
    <nameField>
        <displayFormat>camp-{0000}</displayFormat>
        <label>WhatsApp Campaign Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WhatsApp Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>