force-app/main/default/objects/WhatsApp_Campaign__c/fields/Email_Alert__c.field-meta.xml
<CustomField>
    <fullName>Email_Alert__c</fullName>
    <inlineHelpText>Please check the email template for this email alert. Always use &quot;Referral/Loyalty Email Alert&quot;</inlineHelpText>
    <label>Email Alert</label>
    <length>255</length>
    <type>Text</type>
</CustomField>