force-app/main/default/objects/WhatsApp_Campaign__c/fields/Field_2__c.field-meta.xml
<CustomField>
    <fullName>Field_2__c</fullName>
    <label>Field 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Filter_Fileds</valueSetName>
    </valueSet>
</CustomField>