force-app/main/default/objects/WhatsApp_Campaign__c/fields/Member_Type__c.field-meta.xml
<CustomField>
    <fullName>Member_Type__c</fullName>
    <label>Member Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Booking__c</fullName>
                <label>Booking</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>