force-app/main/default/objects/WhatsApp_Campaign__c/fields/Members_Count__c.field-meta.xml
<CustomField>
    <fullName>Members_Count__c</fullName>
    <label>Members Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>