force-app/main/default/objects/WhatsApp_Campaign__c/fields/Operator_2__c.field-meta.xml
<CustomField>
    <fullName>Operator_2__c</fullName>
    <label>Operator 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Operator</valueSetName>
    </valueSet>
</CustomField>