force-app/main/default/objects/WhatsApp_Campaign__c/fields/Value_10__c.field-meta.xml
<CustomField>
    <fullName>Value_10__c</fullName>
    <label>Value 10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>