force-app/main/default/objects/WhatsApp_Campaign__c/fields/Value_1__c.field-meta.xml
<CustomField>
    <fullName>Value_1__c</fullName>
    <inlineHelpText>Date format should be yyyy-mm-dd</inlineHelpText>
    <label>Value 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>