force-app/main/default/objects/WhatsApp_Campaign__c/fields/Value_3__c.field-meta.xml
<CustomField>
    <fullName>Value_3__c</fullName>
    <label>Value 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>