force-app/main/default/objects/WhatsApp_Campaign__c/recordTypes/Customized.recordType-meta.xml
<RecordType>
    <fullName>Customized</fullName>
    <active>true</active>
    <label>Customized</label>
</RecordType>