force-app/main/default/objects/WhatsApp_Campaign__c/recordTypes/Filtered.recordType-meta.xml
<RecordType>
    <fullName>Filtered</fullName>
    <active>true</active>
    <label>Filtered</label>
</RecordType>