force-app/main/default/objects/WhatsApp_Campaign__c/recordTypes/Opportunity_Email.recordType-meta.xml
<RecordType>
    <fullName>Opportunity_Email</fullName>
    <active>true</active>
    <label>Opportunity Email</label>
</RecordType>