force-app/main/default/objects/WhatsApp_Campaign__c/validationRules/Email_Template_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Template_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  RecordType.Name == &apos;Email&apos;,
  ISBLANK(Email_Template__c )
)</errorConditionFormula>
    <errorMessage>Please add Email Template Name</errorMessage>
</ValidationRule>